--- a/app/assets-default/stylesheets/public_ui_layout.css.scss
+++ b/app/assets-default/stylesheets/public_ui_layout.css.scss
@@ -30,7 +30,7 @@ html, body {
 #logo{
   background-position: 50% !important;
   background-repeat: no-repeat !important;
-  background-size: 100% auto;
+  //background-size: 100% auto;
   height: auto !important;
   padding: 0;
 }
@@ -45,7 +45,7 @@ html, body {
   }
 
   #logo{
-    width: 350px;
+    width: 370px;
     line-height: 50px;
   }
 
